# QNNDemo

./: README.md  debug.py  env.sh  make_raw.py  model_convert.sh  onnx_io_info.py  simplify_onnx.sh
SampleApp/: CMakeLists.txt  README.txt  build.sh
SampleApp/src/: main.cpp  native-lib.cpp
x86_64-linux-clang/: htp_backend_extensions.json  htp_config.json
